# swagger.yaml
@@ -3,13 +3,15 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError is a generic error message returned by
+      a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: basic-microservice/hello/product-api/handlers_gorilla
+    x-go-package: basic-microservice/hello/models
   Product:
     description: Product defines the structure for an API product
     properties:
@@ -47,21 +49,23 @@ definitions:
     type: object
     x-go-package: basic-microservice/hello/product-api/data
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError is a collection of validation error
+      messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: basic-microservice/hello/product-api/handlers_gorilla
+    x-go-package: basic-microservice/hello/models
 info:
   description: Documentation for Product API
   title: of Product API
   version: 1.0.0
 paths:
-  /products:
+  /:
     get:
       description: Return a list of products from the database
       operationId: listProducts
@@ -75,6 +79,12 @@ paths:
       responses:
         "200":
           $ref: '#/responses/productsResponse'
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "501":
+          $ref: '#/responses/errorResponse'
       tags:
       - products
   /products/{id}:
